# bootstrap

./: .gitignore  LICENSE  RAG.md  README.md  bootstrap.sh  codemap.md  example.bootstrap.conf.yml  init.sh  kilo-session-report.py  openVSwitch-Netplan-Deb13.md
.kilo-copy/agents/: code.md  ee-docker.md  plan.md
.kilo-copy/rules/: mermaid-standards.md  safety-and-ops.md
_plans/: HOSTNAME_MDNS_FIX.md  extract-dev-infra.md  mdns-avahi-report.md
init.d/01-apt-update-upgrade/: run.sh
init.d/05-baseline-packages/: packages.txt  run.sh
init.d/05-packages/: packages.txt  run.sh
init.d/10-create-deploy-user/: run.sh
init.d/20-groups/: groups.txt  run.sh
init.d/25-packages/: packages.txt  run.sh
init.d/30-passwordless-sudo/: commands.txt  run.sh
init.d/40-profile/: profile.snippet  run.sh
init.d/50-docker/: run.sh
init.d/51-ssh-hardening/: 60-auth.conf  60-hardening.conf  61-hardening.conf  run.sh
init.d/52-ufw/: run.sh
init.d/53-fail2ban/: run.sh
init.d/54-crowdsec/: run.sh
init.d/55-lazydocker/: run.sh
init.d/57-kvm/: run.sh
llmdocs/: LLM_INSTRUCTIONS.md  __init__.py  postprocess.py  prep.py  sections.py
user/: init.sh  sync-kilo-context.sh
user-bootstrap/: init.sh  sync-kilo-context.sh
user/opencode/mcp-server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
user/opencode/mcp-server/src/host_standards/: __init__.py  __main__.py  logging_config.py  resources.py
user/opencode/mcp-server/src/host_standards/tools/: standards.py
user/opencode/mcp-server/tests/: test_standards.py
vscode/: settings.json
(+207 files in other folders)
